--- a/app/Resources/views/default/onePost.html.twig
+++ b/app/Resources/views/default/onePost.html.twig
@@ -18,11 +18,11 @@
 
 				<div class="card-action">
 					<div class='row'>
-						<div class='col-md-6' style="color:green;">
-							<a  href="{{ path('post_like',{'idPost':post.id}) }}"></a>
+						<div class='col-md-6' style="background-color:green;">
+							<a  href="{{ path('post_like',{'idPost':post.id}) }}">J'aime</a>
 						</div>
-						<div class='col-md-6' style="color:red;">
-							<a  href="{{ path('post_unlike',{'idPost':post.id}) }}"></a>
+						<div class='col-md-6' style="background-color:red;">
+							<a  href="{{ path('post_unlike',{'idPost':post.id}) }}">J'aime Pas</a>
 						</div>
 					</div>
 				</div><!-- card actions -->
