--- a/app/Resources/views/default/onePost.html.twig
+++ b/app/Resources/views/default/onePost.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<h1>Posts</h1>
+<h1>Post</h1>
 <div class="container">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2" style="max-height:550px; max-width:1200px; ">
