--- a/app/Resources/views/default/onePost.html.twig
+++ b/app/Resources/views/default/onePost.html.twig
@@ -6,7 +6,7 @@
 		<div class="col-md-8 col-md-offset-2" style="max-height:550px; max-width:1200px; ">
 			<div class="card">
 				<div class="card-image" style="max-height:410px; max-width:1200px; " >
-					<img class="img-responsive" src="uploads/images/{{post.image}}">
+					<img class="img-responsive" src="/uploads/images/{{post.image}}">
 				</div><!-- card image -->
 
 				<div class="card-content" style="max-height:139px; max-width:1200px;">
@@ -15,7 +15,7 @@
 						<span class="glyphicon glyphicon-comment"></span>
 					</button>
 				</div><!-- card content -->
-
+				{{post.votePlus}} plus -  {{post.voteMoins}} moins
 				<div class="card-action">
 					<div class='row'>
 						<div class='col-md-6' style="background-color:green;">
@@ -28,18 +28,20 @@
 				</div><!-- card actions -->
 				<div class="card-reveal">
 					<span class="card-title">Commentaires</span> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+
 					{% for comment in post.comments %}
 					<div class="comment">
-						{#<h5>{{comment.user}}</h5>#}
+
+						<h5><b>{{comment.user.username}}</b><span class="pull-right">{{comment.date | date("d/m/Y")}}</span></h5>
 						<span>{{comment.text}}</span>
-						{#<p>{{comment.date}}</p>#}
 					</div>
 					{% endfor %}
+					<hr/>
 					<div>
                         {{ form_start(form) }}
 							<form>
                                 {{ form_row(form, {'attr': {'class': 'inputC'}}) }}
-								<button class="add-submit" type="submit">Ajouter</button>
+								<button class="btn btn-primary" type="submit">Ajouter</button>
 							</form>
                         {{ form_end(form) }}
 
